a few minor updates
Signed-off-by: James Sturtevant <jstur@microsoft.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,5 +29,5 @@ jobs:
         run: |
           cargo fmt -- --check
           cargo check
-      - name: Check
+      - name: Tests
         run: cargo test
