--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ windows-sys = { version = "0.48.0", features = [
     "Win32_Security_Cryptography",
     "Win32_System_Console",
     "Win32_System_WindowsProgramming",
-    
 ]}
 cvt = "0.1.2"
 libc = "0.2.147"
+
+[dev-dependencies]
+windows = { version="0.51", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects"] }
