Move stuff around to create structure and examples
Signed-off-by: James Sturtevant <jstur@microsoft.com>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,3 +31,5 @@ jobs:
           cargo check
       - name: Tests
         run: cargo test
+      - name: Run Examples
+        run: cargo run --example job
